# sentinelmesh

./: DEPLOYMENT.md  README.md
docs/: DEMO_RUNBOOK.md  DEMO_SCENARIOS.md  Defense-Layers.md  Microsoft-Integration.md  Multi-Agent-Plan-2-5.md  Multi-Agent-Security.md  SentinelMesh-Overview.md  SentinelMesh-Submission.md
ops/: sentinelmesh.env.example
sentinelmesh-agents/: .gitignore  Dockerfile  Dockerfile.foundry  README.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  requirements.txt
sentinelmesh-agents/artifacts/: redteam-report.json
sentinelmesh-agents/examples/: maf_governed_agent.py  redteam_compare.py  sk_governed_agent.py
sentinelmesh-agents/src/sentinelmesh_agents/: __init__.py  config.py  main.py  runtime.py
sentinelmesh-agents/src/sentinelmesh_agents/agents/: graph.py  prompts.py  state.py
sentinelmesh-agents/src/sentinelmesh_agents/api/: models.py  routes.py
sentinelmesh-agents/src/sentinelmesh_agents/demo_site/: booking_api.py  booking_db.py  booking_service.py  data.py  outbox_dispatcher.py  server.py
sentinelmesh-agents/src/sentinelmesh_agents/demo_site/templates/: 404.html  _concierge.html  _flight_card.html  _footer.html  _hotel_card.html  _nav.html  base.html  checkout.html  confirmed.html  flights.html  home.html  hotel_detail.html  hotels.html
sentinelmesh-agents/src/sentinelmesh_agents/llm/: base.py  factory.py  ollama_client.py  openai_compat.py  stub.py
sentinelmesh-agents/src/sentinelmesh_agents/microsoft/: __init__.py  foundry_host.py  maf_middleware.py  red_team.py  tracing.py
sentinelmesh-agents/src/sentinelmesh_agents/sentinel/: client.py
sentinelmesh-agents/src/sentinelmesh_agents/tools/: booking_tool.py  browser.py  defaults.py  http_tool.py  mock_tools.py  registry.py
sentinelmesh-agents/tests/: test_booking_concurrency.py  test_booking_revamp.py  test_end_to_end.py  test_maf_middleware.py  test_outbox_dispatcher.py  test_red_team.py  test_sk_filter.py  test_smoke.py  test_tracing.py
sentinelmesh-backend/: .env.example  .gitignore  BENCHMARKS.md  Dockerfile  README.md  build.gradle.kts  docker-compose.yml  settings.gradle.kts
sentinelmesh-frontend/: Dockerfile  README.md  next.config.mjs  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  tsconfig.tsbuildinfo
tools/: build_deck_pdf.py  (+3 more)
(+184 files in other folders)
