[project]
name = "sentinelmesh-agents"
version = "0.1.0"
description = "Real LangGraph AI agents wired into the SentinelMesh security backend."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    # Web
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "httpx>=0.27.0",
    "jinja2>=3.1.0",
    "python-multipart>=0.0.12",

    # Agent orchestration
    "langgraph>=0.2.40",
    "langchain-core>=0.3.0",

    # Tools
    "playwright>=1.48.0",
    "beautifulsoup4>=4.12.0",

    # Optional LLM SDKs (loaded lazily; safe to install)
    "openai>=1.54.0",         # works against Ollama, Azure OpenAI, OpenAI, Groq
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.7.0",
]
docs = [
    "reportlab>=4.2.0",
]
# Microsoft AI ecosystem integrations. All adapters in
# `sentinelmesh_agents.microsoft.*` lazy-import these — the base package
# imports cleanly without any of them.
microsoft = [
    # Microsoft Agent Framework — unifies Semantic Kernel + AutoGen, is the
    # recommended path for Foundry Hosted agents.
    "agent-framework>=1.0.0",
    # OpenAI-compatible chat client used by the MAF examples.
    "openai>=1.54.0",
]
redteam = [
    # Azure AI Evaluation SDK with PyRIT extras — drives the AI Red Teaming
    # Agent harness in `sentinelmesh_agents.microsoft.red_team`.
    "azure-ai-evaluation[redteam]>=1.0.0",
    "azure-identity>=1.17.0",
]
otel = [
    # OpenTelemetry SDK + OTLP exporter — Sentinel decisions are emitted as
    # spans tagged with the gen_ai.execute_tool semantic convention so they
    # show up natively in Microsoft Foundry's trace viewer.
    "opentelemetry-sdk>=1.27.0",
    "opentelemetry-exporter-otlp>=1.27.0",
    "opentelemetry-api>=1.27.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sentinelmesh_agents"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "e2e: end-to-end tests that spawn real subprocesses (slow; opt in with -m e2e)",
]

[tool.ruff]
line-length = 100
target-version = "py310"
